<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_space"
    tools:context=".ui.fragments.SearchFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            style="@style/Theme.DemoDistanceCalculator.TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:width="300dp"
            android:gravity="center"
            android:text="@string/please_write_down_your_registration_number"
            android:textSize="@dimen/extra_large_text" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLat1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/normal_space"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLat1"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:ems="16"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/registrationNumber"
                android:inputType="textCapCharacters"
                android:text=""
                android:textAllCaps="true"
                android:textSize="@dimen/normal_space"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bNext"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/get_information"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>